# sakthai-agent-v2

./: .gitignore  .gitleaks.toml  5_agents_summary.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  GEMINI.md  LEARNINGS.md  LICENSE  Makefile  Marketing.md  OPERATING_CONTRACT.md  PLAN.md  README.md  SAKKING_SOUL.md  SAKSEE_SOUL.md  SAKSIT_SOUL.md  SAKTHAI.md  SAKTHAI_SOUL.md  SECURITY.md  SKILL.md  SOUL.md  USER.md  bandit_fix.patch  changes.txt  code_review_request.md  current_test_sync.py  dashboard_fix.patch  filter_and_score_tests.txt  final_fix.py  headers_cli.patch  headers_scripts.patch  headers_web.patch  new_tests.py  pyproject.toml  run_in_sandbox_diff.patch  test_fix.patch  (+8 more)
.Jules/: palette.md
.agents/: AGENTS.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto-dependency-update.yml  ci.yml  manual.yml  pages.yml  pylint.yml
.jules/: bolt.md  sentinel.md
config/: config.yaml  gateway_voice_mode.json  model_roster.SKILL.md  model_roster.sh
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
dashboard/public/: data.json
dashboard/src/: App.jsx  App.test.jsx  index.css  main.js  style.css
data/: README.md  sample-memory.jsonl
default/: SOUL.md  config.yaml
docs/: README.md  architecture.md  capabilities.md  cloud.md  dashboard_improvements.md  example-mcp.json  integrations.md  og_parity_audit.md  plugins.md  replication.md  runtimes.md  sakthai-live-connect-plan.md  skill-naming.md  uf-release-checklist.md  uf-user-guide.md  workflows_caveman_integration_audit.md  workspace.md
docs/cycle/: Care.md  Dream.md  Growth.md  Hope.md  Joy.md  Trust.md
env-templates/: .env.example
infra/hermes-agents/: .gitignore  README.md  SYNC_GUIDE.md  deploy.py  doctor.py
personas/: README.md
personas/sakjules/: SOUL.md
personas/sakking/: SOUL.md
personas/saksee/: SOUL.md
personas/saksit/: README.md  SOUL.md
personas/saktan/: SOUL.md
personas/sakthai/: SOUL.md
product/: PLAN.md  todo.md
profiles/hermesagent/: SOUL.md  config.yaml
profiles/saksit/: config.yaml
profiles/sakthai/: SOUL.md  config.yaml
sakthai/: auth.py  config.py  hermes_skills.py  hf.py  sakking_skills.py  sandbox.py  skills.py
sakthai/agent/: loop.py  tools.py  usage.py
sakthai/cli/: __init__.py  agent.py  cloud.py  cycle.py  dashboard.py  extensions.py  hf.py  memory.py  sessions.py  skills.py  system.py
sakthai/cloud/: __init__.py  runtime.py  tools.py
sakthai/cycle/: state.py
sakthai/dashboard/: __init__.py  app.py  data.py
sakthai/extensions/: __init__.py  install.py
sakthai/mcp/: __init__.py  client.py  manager.py  server.py  servers.py
sakthai/memory/: __init__.py  backup.py  provider.py  store.py  sync.py
sakthai/telegram/: README.md  __main__.py  bot.py  config.py  workflow_executor.py
sakthai/web/: server.py
scratch/: README.md  recall_digest.py
scripts/: bootstrap.sh  compose_persona.py  diagnose_personas.py  export_agent_repo.py  regenerate-supermemory-canonicals.py  release.sh  rename_skills.py  serve_api.py  setup-extensions.sh  telegram_send.py  verify_headers.py
services/hugging-face-dataset-publishing/: pitch.md
shared/: agents-roster.md
skills/: .curator_state  .usage.json
skills/playwright-network-testing/: SKILL.md
skills/playwright-performance/: SKILL.md
skills/playwright-security-hardening/: SKILL.md
skills/playwright-visual-testing/: SKILL.md
skills/saas-deal-desk-discount-governance/: SKILL.md
skills/sakthai-audiocraft/: SKILL.md
skills/sakthai-coding-error-handling/: SKILL.md
skills/sakthai-coding-security/: SKILL.md
skills/sakthai-compact-voice-operator/: SKILL.md
skills/sakthai-cron-watchdog-self-heal/: SKILL.md
skills/sakthai-cronjob-auth/: SKILL.md
skills/sakthai-cycle-care/: SKILL.md
skills/sakthai-cycle-dream/: SKILL.md
skills/sakthai-cycle-growth/: SKILL.md
skills/sakthai-cycle-hope/: SKILL.md
skills/sakthai-cycle-joy/: SKILL.md
skills/sakthai-cycle-trust/: SKILL.md
skills/sakthai-hf-learn-skill-loop/: SKILL.md
skills/sakthai-hf-write-from-environment/: SKILL.md
skills/sakthai-hf-xet-storage/: SKILL.md
skills/sakthai-instagram-qa/: SKILL.md
skills/sakthai-lm-evaluation-harness/: SKILL.md
skills/sakthai-local-api-prototype/: SKILL.md
skills/sakthai-mcp-management/: SKILL.md
skills/sakthai-media-playback/: SKILL.md
skills/sakthai-memory-admin/: SKILL.md
skills/sakthai-personal/: SKILL.md
skills/sakthai-playwright-accessibility-testing/: SKILL.md
skills/sakthai-playwright-auth-flow-state-testing/: SKILL.md
skills/sakthai-playwright-browser-lifecycle/: SKILL.md
skills/sakthai-playwright-chromium-tracing/: SKILL.md
skills/sakthai-playwright-clipboard-security-validation/: SKILL.md
skills/sakthai-playwright-console-error-enrichment/: SKILL.md
systemd/: hermes-gateway-saksee.service
tests/: test_agent_loop.py  test_auth.py  test_check_env_diagnostics.py  test_cli.py  test_cli_consolidate_sessions.py  test_cli_system.py  test_cloud.py  test_compose_persona.py  test_config_reports.py  test_cycle_skills_config.py  test_dashboard_app.py  test_dashboard_data.py  test_dashboard_sessions.py  test_doctor_integration.py  test_entrypoint.py  test_export_agent_repo.py  test_extensions.py  test_hermes_skills.py  test_hf.py  test_integration.py  test_learn_capture.py  test_mcp_client.py  test_mcp_client_resilience.py  test_mcp_main.py  test_mcp_manager.py  test_mcp_server.py  test_mcp_servers.py  test_memory_aux.py  test_memory_concurrent.py  test_memory_store.py  test_memory_sync.py  test_provider_contracts.py  test_provider_resilience.py  test_providers.py  test_providers_anthropic.py  test_providers_base.py  test_providers_detect.py  test_providers_gemini.py  test_providers_openai.py  test_registry.py  (+11 more)
web/: README.md  app.js  data.json  index.html  styles.css
web-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+262 files in other folders)
