[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sakthai-agent"
version = "2.0.0"
description = "Personal learning agent — persistent SQLite memory, explicit fact capture, a Claude/Gemini agent loop, and an MCP stdio server."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "beer-sakthai" }]
dependencies = [
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "anthropic>=0.40,<1.0",
    "httpx>=0.20.0",
    "google-genai>=2.0.0",
    "tenacity>=8.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
]

dashboard = [
    "streamlit>=1.36",
    "plotly>=5.22",
    "pandas>=2.2",
    "PyGithub>=2.3",
]
all = ["sakthai-agent[dev,dashboard]"]

[project.scripts]
sakthai = "sakthai.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "integration: tests that may hit real external endpoints (Ollama/Anthropic); excluded from CI via -m 'not integration', and self-skip when the endpoint/credential is absent",
]

[tool.coverage.run]
source = ["sakthai"]
# app.py is Streamlit presentation glue needing a live runtime; its data logic
# lives in dashboard/data.py (tested). A guarded smoke test covers the figure
# builders where the `dashboard` extra is installed (tests/test_dashboard_app.py).
omit = ["sakthai/dashboard/app.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["library", "scripts", "web-dashboard"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
files = ["sakthai"]

# The Streamlit app is presentation glue over untyped third-party libs; type
# it loosely so strict checks don't fight the streamlit/plotly/pandas stubs.
[[tool.mypy.overrides]]
module = "sakthai.dashboard.app"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B606", "B607"]

[tool.setuptools.packages.find]
include = ["sakthai*"]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
