[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sakthai-agent"
version = "2.0.0"
description = "Personal learning agent — persistent SQLite memory, explicit fact capture, a Claude/Gemini agent loop, and an MCP stdio server."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "beer-sakthai" }]
dependencies = [
    "click>=8.1,<9.0",
    "pyyaml>=6.0,<7.0",
    "anthropic>=0.111.0,<1.0",
    "httpx>=0.20.0",
    "google-genai>=2.9.0",
    "tenacity>=8.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.15.18",
    "mypy>=1.10",
    "bandit[toml]>=1.9.4",
]

# Mutation testing is a local quality gate, not a CI gate (a full run is far too
# slow for CI). Kept out of `dev` so the CI install stays lean; `make mutation`
# installs this extra on demand. See [tool.mutmut] below.
mutation = [
    "mutmut>=3.2",
]

dashboard = [
    "streamlit>=1.36",
    "plotly>=5.22",
    "pandas>=2.2",
    "PyGithub>=2.3",
]

all = ["sakthai-agent[dev,dashboard]"]

[project.scripts]
sakthai = "sakthai.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "integration: tests that may hit real external endpoints (Ollama/Anthropic); excluded from CI via -m 'not integration', and self-skip when the endpoint/credential is absent",
]

[tool.coverage.run]
source = ["sakthai"]
# Measure branch coverage too: line coverage alone hides untested conditional
# paths (one side of an if/else). CI passes --cov-branch so the fail_under floor
# below gates branches as well as lines.
branch = true
# app.py is Streamlit presentation glue needing a live runtime; its data logic
# lives in dashboard/data.py (tested). A guarded smoke test covers the figure
# builders where the `dashboard` extra is installed (tests/test_dashboard_app.py).
omit = ["sakthai/dashboard/app.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor sits a few points below the current ~89% so it catches real
# regressions (e.g. a whole module silently dropping to 0%) without being
# brittle. Raise it as coverage improves.
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["library", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
files = ["sakthai"]

# The Streamlit app is presentation glue over untyped third-party libs; type
# it loosely so strict checks don't fight the streamlit/plotly/pandas stubs.
[[tool.mypy.overrides]]
module = "sakthai.dashboard.app"
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B606", "B607"]

# Mutation testing (local-only, via `make mutation`). Scoped to the core seam
# modules where a surviving mutant most directly signals a weak assertion: the
# memory store, the agent loop, the tool registry, and the built-in tools.
# Keys follow mutmut >= 3.x (`source_paths`, not the deprecated `paths_to_mutate`).
[tool.mutmut]
source_paths = [
    "sakthai/memory/store.py",
    "sakthai/agent/loop.py",
    "sakthai/agent/tools.py",
    "sakthai/agent/registry.py",
]
# mutmut runs the suite from an isolated ``mutants/`` copy and drops the original
# source from sys.path, so anything the mutated modules import at runtime must be
# copied in too. ``source_paths`` only copies the four files above, which left
# ``mutants/sakthai`` a partial namespace package (``from . import providers``
# failed with "unknown location") — mutation testing could not run at all. Copy
# the whole package so imports resolve; ``create_mutants`` still mutates only the
# four ``source_paths`` files (it runs after the copy), so scope is unchanged.
also_copy = [
    "sakthai",
]
# mutmut's stats phase runs the whole suite once with a trampoline that resolves
# the (relative) ``source_paths`` against the *current* working directory on every
# call into a mutated module. Tests that ``chdir`` into a tmp dir therefore crash
# that phase ("No such file or directory: 'sakthai'"), aborting the whole run.
# Deselect exactly those cwd-changing tests from the mutmut run (they exercise CLI
# setup / web-server / read_file path handling, not the mutated core logic, so the
# survivor list is unaffected in practice). A renamed/removed node id here degrades
# to a harmless pytest warning rather than an error.
pytest_add_cli_args_test_selection = [
    "--deselect=tests/test_cli.py::test_serve_dashboard_starts_and_stops_on_interrupt",
    "--deselect=tests/test_cli.py::test_dashboard_security_handler_sets_headers",
    "--deselect=tests/test_cli_system.py::TestSetupCommand::test_env_file_found_when_present",
    "--deselect=tests/test_cli_system.py::TestSetupCommand::test_env_file_missing_shows_error",
    "--deselect=tests/test_cli_system.py::TestSetupCommand::test_all_checks_passed_shows_success",
    "--deselect=tests/test_cli_system.py::test_setup_interactive_create_env",
    "--deselect=tests/test_cli_system.py::test_setup_interactive_set_api_key",
    "--deselect=tests/test_cli_system.py::test_setup_interactive_empty_key_records_issue",
    "--deselect=tests/test_cli_system.py::test_setup_no_interactive_skips_prompts",
    "--deselect=tests/test_cli_system.py::test_setup_interactive_refuse_create_env",
    "--deselect=tests/test_cli_system.py::test_setup_interactive_append_api_key",
    "--deselect=tests/test_tools.py::test_read_file_within_cwd",
    "--deselect=tests/test_tools.py::test_read_file_truncates_large_file",
    "--deselect=tests/test_tools.py::test_read_file_missing_file_raises",
    "--deselect=tests/test_tools.py::test_read_file_directory_is_not_a_regular_file",
    "--deselect=tests/test_tools.py::test_read_file_oserror_on_resolve",
    "--deselect=tests/test_tools.py::TestReadFileSymlink::test_symlink_to_outside_root_is_blocked",
    "--deselect=tests/test_tools.py::TestReadFileSymlink::test_symlink_within_root_is_allowed",
    "--deselect=tests/test_web_server.py::TestServeFunction::test_serve_creates_httpserver_with_correct_args",
    "--deselect=tests/test_web_server.py::TestServeFunction::test_serve_custom_host_port",
    "--deselect=tests/test_web_server.py::TestMainBlock::test_main_block_starts_server_and_exits_on_interrupt",
    "--deselect=tests/test_web_server.py::TestStaticFileServe::test_serves_file_within_static_root",
]

[tool.setuptools.packages.find]
include = ["sakthai*"]
exclude = ["tests*"]

# --- Monorepo note --------------------------------------------------------
# This repo is a monorepo (see top-level README). The core package is
# sakthai-agent (this file). The other co-located Python package,
# packages/agent-self-evolution, is intentionally NOT a uv workspace member:
# its dependency set (dspy/optuna/…) is disjoint and heavy, and its `darwinian`
# extra references an unpublished package, so folding it into this lock would
# bloat and break the core resolution. It is built/installed on its own (see
# packages/agent-self-evolution/README.md). infra/pw-poc is an npm project and
# infra/hermes-agents is config-only — neither is a Python build target.

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff.lint.extend-per-file-ignores]
"packages/agent-self-evolution/*" = ["E402", "F401", "B904", "SIM102", "F841"]
"personas/*" = ["F841"]
